init: multiple pdf file selection feature v1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="file-section">
         <h2>Step 1: Select PDF Files</h2>
         <button id="select-pdfs" class="btn">Select PDF Files</button>
+        <button id="clear-selection" class="btn secondary">Clear Selection</button>
         <div id="pdf-paths" class="file-paths-container">
             <span class="text-muted">None</span>
         </div>
