init: code refactoring

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>PDF Renamer (XML Version)</title>
+    <title>PDF Renamer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
-    <h1>PDF Renamer with XML Support</h1>
+    <h1>PDF Renamer</h1>
 
     <div class="file-section">
         <h2>Step 1: Select PDF Files</h2>
