--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="sidebar-section">
-                <h2 id="step3-title">Step 3: Rename the PDFs</h2>
+                <h2 id="step3-title">Rename the PDFs</h2>
                 <button id="rename-btn" class="btn primary" disabled>Rename PDFs</button>
             </div>
         </aside>
@@ -62,17 +62,6 @@
                         <span class="text-muted">None</span>
                     </div>
                 </div>
-            </div>
-
-            <div class="info-section">
-                <h3 id="how-it-works" class="info-title">How it works:</h3>
-                <h4 id="app-will" class="info-subtitle">The app will:</h4>
-                <ol>
-                    <li id="step1-detail">Find each PDF in the XML document</li>
-                    <li id="step2-detail">Look for the index with name="Bemerkung"</li>
-                    <li id="step3-detail">Use its value as the new filename</li>
-                    <li id="step4-detail">Create a copy of each PDF with its new name</li>
-                </ol>
             </div>
 
             <div id="result" class="result-section"></div>
