init: added delete original file feature

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <button id="select-pdfs" class="btn primary">Select PDF Files</button>
                     <button id="clear-selection" class="btn">Clear Selection</button>
                 </div>
+                <div class="checkbox-container">
+                    <input type="checkbox" id="delete-originals" class="custom-checkbox">
+                    <label for="delete-originals" id="delete-originals-label">Delete original files after renaming</label>
+                </div>
             </div>
 
             <div class="sidebar-section">
