init: switch language toggler with flags and handle duplicate file selection

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 id="app-title">Tagleser</h1>
         </div>
         <button id="language-toggle" class="language-switcher animate__animated animate__fadeIn">
-            Switch to German
+            <img src="./assets/german.png" alt="German Flag" />
         </button>
     </header>
 
